Добавил удаление постов ^_^

--- a/src/views/secret.hbs
+++ b/src/views/secret.hbs
@@ -3,11 +3,11 @@
 
 <div class="d-flex justify-content-center">
 
-  <form action="adressbook" method="POST">
+  <form action="formposts" method="POST">
 
-    <div class="mb-3">
+    {{!-- <div class="mb-3">
       <input name="name" type="text" class="form-control" placeholder="Ваше имяу">
-    </div>
+    </div> --}}
 
     <div class="form-floating">
       <textarea name="textArea" class="form-control" placeholder="Ваш постмяу" style="height: 100px"></textarea>
@@ -28,15 +28,21 @@
 <hr />
 
 
-<section class="row">
-  {{#each listOfPeople}}
-  <div class="card mx-2 my-2" style="width: 18rem;">
-    <img src={{this.image}} class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{this.name}}</h5>
-      <p class="card-text">{{this.textArea}}</p>
-    </div>
-    <span>Id: {{this.Id}}</span>
-  </div>
+<section data-posts class="row">
+  {{#each listOfPosts}}
+    <div data-post_id="{{this.id}}" class="card mx-2 my-2" style="width: 18rem;">
+      <img src={{this.image}} class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{this.authorName}}</h5>
+        <p class="card-text">{{this.textArea}}</p>
+      </div>
+      {{!-- <span>Id: {{this.authorId}}</span> --}}
+      {{!-- <button data-remove_post class="btn btn-danger my-2 mx-5">
+        Delete
+      </button> --}}
+      <div>
+        <i data-remove_post class="bi bi-trash-fill trash-icon"></i>
+      </div>
+    </div>  
   {{/each}}
 </section>
