--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,7 +1,4 @@
-<div class="d-flex justify-content-center my-2 mx-5">
+<h2 class="d-flex justify-content-center my-2 mx-5">
   Добро пожаловать в наш уютный нянстаграм o(>ω<)o
-</div> 
-
-<button data-fetch>
-  Fetch
-</button>
+</h2> 
+<img class="rounded mx-auto d-block" src="https://i.pinimg.com/originals/29/49/f3/2949f30af92241fa7c13d185ae38eb27.jpg" alt="">
