Добавил удаление постов v.2

--- a/src/views/secret.hbs
+++ b/src/views/secret.hbs
@@ -5,21 +5,15 @@
 
   <form action="formposts" method="POST">
 
-    {{!-- <div class="mb-3">
-      <input name="name" type="text" class="form-control" placeholder="Ваше имяу">
-    </div> --}}
-
     <div class="form-floating">
       <textarea name="textArea" class="form-control" placeholder="Ваш постмяу" style="height: 100px"></textarea>
       <label for="floatingTextarea2">Ваш постмяу</label>
     </div>
-
     <div>
       {{!-- <input name="image" type="file" id="userImage" /> --}}
       <input name="image" class="my-2" type="text" id="userImage" placeholder="Ссылка на картинку..." />
     </div>
     <input class="btn btn-primary my-2" type="submit" id="uploadImage" value="Отправмяу" />
-
 
   </form>
 
@@ -41,7 +35,7 @@
         Delete
       </button> --}}
       <div>
-        <i data-remove_post class="bi bi-trash-fill trash-icon"></i>
+        <i data-remove_post class="bi bi-x-octagon-fill"></i>
       </div>
     </div>  
   {{/each}}
